nginx-deployment-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"nginx-main"},"name":"nginx-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"nginx-main"}},"template":{"metadata":{"labels":{"app":"nginx-main"}},"spec":{"containers":[{"image":"nginx:stable-alpine3.17","name":"nginx-main","ports":[{"containerPort":8080}],"resources":{"limits":{"cpu":"200m","memory":"512Mi"},"requests":{"cpu":"50m","memory":"256Mi"}}}]}}}}
  creationTimestamp: "2024-04-10T09:41:13Z"
  generation: 1
  labels:
    app: nginx-main
  name: nginx-deployment
  namespace: default
  resourceVersion: "10300"
  uid: fbc247c2-7714-4f2b-9748-9a2983ad66ca
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-main
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-main
    spec:
      containers:
      - image: nginx:stable-alpine3.17
        imagePullPolicy: IfNotPresent
        name: nginx-main
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2024-04-10T09:41:14Z"
    lastUpdateTime: "2024-04-10T09:41:14Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-04-10T09:41:13Z"
    lastUpdateTime: "2024-04-10T09:41:14Z"
    message: ReplicaSet "nginx-deployment-7b97c645c6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
